--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,36 +1,22 @@
 /** Start: to style navigation tab **/
-.nav {
-  list-style: none;
-}
-.nav > li > a {
-  display: block;
-}
-.nav-tabs{
-  *zoom: 1;
-}
+.nav {list-style: none;}
+.nav > li > a {display: block;}
+.nav-tabs{*zoom: 1; padding-left: 35%;}
 .nav-tabs:before,
 .nav-tabs:after {
   display: table;
   content: "";
 }
-.nav-tabs:after {
-  clear: both;
-}
-.nav-tabs > li {
-  float: left;
-}
+.nav-tabs:after {clear: both;}
+.nav-tabs > li {float: left;}
 .nav-tabs > li > a {
   padding-right: 12px;
   padding-left: 12px;
   margin-right: 2px;
   line-height: 14px;
 }
-.nav-tabs {
-  border-bottom: 1px solid #ddd;
-}
-.nav-tabs > li {
-  margin-bottom: -1px;
-}
+.nav-tabs {border-bottom: 1px solid #ddd;}
+.nav-tabs > li {margin-bottom: -1px;}
 .nav-tabs > li > a {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -40,9 +26,7 @@
    -moz-border-radius: 4px 4px 0 0;
       border-radius: 4px 4px 0 0;
 }
-.nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #dddddd;
-}
+.nav-tabs > li > a:hover {border-color: #eeeeee #eeeeee #dddddd;}
 .nav-tabs > .active > a,
 .nav-tabs > .active > a:hover {
   color: #555555;
@@ -51,12 +35,6 @@
   border: 1px solid #ddd;
   border-bottom-color: transparent;
 }
-.tab-content.active{
-  display: block;
-}
-.tab-content.hide{
-  display: none;
-}
-.hamburgerMenu{
-  display: none;
-}
+.tab-content.active{display: block;}
+.tab-content.hide{display: none;}
+.hamburgerMenu{display: none;}
